--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+img{
+    border-radius: 8px;
+}
 
 /* css variables  */
 :root {
@@ -86,7 +89,7 @@
 #home::before {
     content: "";
     position: absolute;
-    background: url(pexels-engin-akyurt-1435895.jpg) no-repeat center center/cover;
+    background: url(../images/pexels-engin-akyurt-1435895.jpg) no-repeat center center/cover;
     height: 400px;
     width: 100%;
     z-index: -1;
