--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
 }
-img{
+html{
+    scroll-behavior: smooth;
+}
+
+img {
     border-radius: 8px;
 }
 
@@ -18,7 +22,7 @@ img{
     display: flex;
     /* display: inline; */
     align-items: center;
-    position: relative;
+    position: sticky;
     top: 0;
 
 }
@@ -41,8 +45,8 @@ img{
 }
 
 #logo img {
-    height: 90px;
-    width: 90px;
+    height: 50px;
+    width: 50px;
     margin: 5px 9px;
 }
 
@@ -64,7 +68,7 @@ img{
 #navbar ul li a {
     color: white;
     display: block;
-    padding: 3px 22px;
+    padding: 3px 20px;
     border-radius: 20px;
     text-decoration: none;
 
@@ -80,8 +84,9 @@ img{
 #home {
     display: flex;
     flex-direction: column;
+   
     padding: 3px 200px;
-    height: 300px;
+    height: 268px;
     justify-content: center;
     align-items: center;
 }
@@ -90,7 +95,7 @@ img{
     content: "";
     position: absolute;
     background: url(../images/pexels-engin-akyurt-1435895.jpg) no-repeat center center/cover;
-    height: 400px;
+    height: 410px;
     width: 100%;
     z-index: -1;
     opacity: 0.89;
@@ -126,8 +131,9 @@ img{
 #services .box {
     border: 2px solid brown;
     padding: 34px;
-    margin: 3px 6px;
+    margin: 3px 15px;
     border-radius: 28px;
+    margin-bottom: 20px;
     background-color: rgb(233, 231, 229);
 }
 
@@ -137,13 +143,93 @@ img{
     margin: auto;
     background-color: black;
 }
-#services .box p{
+
+#services .box p {
     font-family: 'Nova Cut', cursive;
 }
 
+/* client section  */
+#client-section {
+    height: 350px;
+}
+
+#client-section::before {
+    content: "";
+    position: absolute;
+    background: url('../images/pexels-elle-hughes-1660030.jpg');
+    width: 100%;
+    height: 50%;
+    z-index: -1;
+    opacity: 0.4;
+}
+
+#clients img {
+    height: auto;
+    width: 150px;
+    margin: 20px;
+}
+
+#clients {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.client-items {
+    padding: 5px;
+}
+
+/* contact section  */
+#contact {
+    position: relative;
+    
+}
+
+#contact::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    background: url('../images/contact.jpg') no-repeat center center/cover;
+}
+
+#contact-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 34px;
+}
+
+#contact-box form {
+    width: 40%;
+}
+
+#contact-box label {
+    font-size: 1.3rem;
+    font-weight: bolder;
+    font-family: 'Nova Cut', cursive;
+
+}
+
+#contact-box input,
+#contact-box textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 9px;
+    font-size: 1rem;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 7px 15px;
+}
 
 /* utility classes */
 .h-primary {
+    margin-top: 35px;
     font-size: 3rem;
     padding: 12px;
     font-family: 'Nova Cut', cursive;
@@ -169,4 +255,3 @@ img{
 .centre {
     text-align: center;
 }
-
